GH-44: Add support for ephemeral (per-request) word and label filters.